Fixed a problem with project home page image sizing on firefox and IE.

--- a/web-app/css/capture.css
+++ b/web-app/css/capture.css
@@ -480,7 +480,6 @@ li.output-summary:last-child {
 }
 
 .thumbnail.with-caption {
-    display: inline-block;
     background: #f5f5f5;
 }
 .thumbnail.with-caption p {
@@ -495,7 +494,6 @@ li.output-summary:last-child {
 .thumbnail.with-caption small {
     width: 100%;
     text-align: right;
-    display: inline-block;
     color: #999;
 }
 
